# PP_Code

./: .gitignore  README
pysrc/simulation/coulomb_collisions/: __init__.py
pysrc/simulation/pic/: README.md
pysrc/simulation/ryutov/: ideal_thin_liner.py
pysrc/theory/bennett_equilibria/: bennett_equilibria_calculator.py
pysrc/theory/bremsstrahlung/: bremsstrahlung_loss_models.py
pysrc/theory/coulomb_collisions/: coulomb_collision.py  relaxation_processes.py
pysrc/theory/newcomb_stability/: newcomb_solver.py
pysrc/theory/reactivities/: fusion_reaction_rates.py  (+1 more)
pysrc/utils/: physical_constants.py  unit_conversions.py
scripts/: README
scripts/iec_power_balance/: electron_cusp_losses.py  maxwellian_power_balance.py
scripts/product_reactant_thermalisation_calculations/: stationary_product_reactant_comparison.py
scripts/timescale_calculations/: compare_fusion_timescales.py
scripts/timescales/: README  compare_fusion_timescales.py
sim_campaigns/: gummersall_evolver.py
sim_campaigns/electron_cusp_confinement/: run_sim.py
sim_campaigns/product_reactant_thermalisation_calculations/: stationary_product_reactant_comparison.py
sim_campaigns/tearing_modes/: delta_validation.csv  iota_profiles.py  psi_s_validation.csv  tearing_mode_validation.py
src/mcf/: CMakeLists.txt
src/mcf/src/: macros.h  main.cpp
src/mcf/src/algo/interpolators/: Interpolator1D.cpp  Interpolator1D.h
src/mcf/src/algo/physicsSolvers/: GradShafranovSolver.cpp  GradShafranovSolver.h
src/mcf/src/utils/: PhysicalConstants.h
src/mcf/testing/: Interpolator1D_unittest.cpp
(+128 files in other folders)
